langtools/test/tools/javac/Object1.out
Object1.java:11:22: compiler.err.cyclic.inheritance: java.lang.Throwable
1 error
